# benchvault

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 003_seed_demo_runs.py  005_seed_dataset_metadata.py  006_add_storage_url_to_dataset_versions.py  007_add_deleted_at_to_benchmark_runs.py  008_add_per_class_metrics.py  009_seed_per_class_demo_data.py  010_add_experiments.py  011_add_experiment_deleted_at.py  4295d3d94a6f_add_descriptions_to_model_versions_and_.py  4cfe1c7ceeb2_seed_dummy_data.py  6094973080e4_add_dataset_metadata_columns.py  6d7933df4124_initial_schema.py  c78cbd41f4e2_make_dataset_version_columns_non_.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py  trash_cleanup.py
backend/app/routes/: compare.py  datasets.py  experiments.py  metrics.py  projects.py  runs.py  schema.py
backend/tests/: conftest.py  test_compare.py  test_datasets.py  test_experiments.py  test_models.py  test_per_class_compare.py  test_per_class_submit.py  test_read_endpoints.py  test_schema.py  test_soft_delete.py  test_submit_run.py
docs/: api-payload.md  integration-guide-pointcloud-benchmark.md
docs/plans/: 2026-03-09-benchvault-design.md  2026-03-09-benchvault-implementation.md
docs/superpowers/plans/: 2026-03-13-erd-tab.md  2026-03-13-experiments-feature.md  2026-03-13-per-class-metrics.md
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js
(+15 files in other folders)
