[project]
name = "backend"
version = "0.1.0"
description = "BenchVault backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "alembic",
    "pydantic",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
]
